// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImagePreview basic usage 1`] = `
<ImagePreview
  closeIcon="clear"
  closeIconPosition="top-right"
  images={
    Array [
      "https://img.yzcdn.cn/vant/apple-1.jpg",
      "https://img.yzcdn.cn/vant/apple-2.jpg",
      "https://img.yzcdn.cn/vant/apple-3.jpg",
    ]
  }
  loop={true}
  maxZoom={3}
  overlay={true}
  showIndex={true}
  showIndicators={false}
  startPosition={0}
  swipeDuration={300}
>
  <Popup
    className="rc-image-preview"
    closeIcon="cross"
    closeIconPosition="top-right"
    closeOnClickOverlay={true}
    duration={300}
    lockScroll={true}
    overlay={true}
    overlayClass="rc-image-preview__overlay"
    position="center"
    preventDefaultMouseDown={false}
    teleport={[Function]}
  >
    <Portal
      containerInfo={<body />}
    >
      <Overlay
        className="rc-image-preview__overlay"
        duration={300}
        lockScroll={true}
        onClick={[Function]}
        zIndex={2000}
      >
        <CSSTransition2
          classNames="rc-fade"
          mountOnEnter={true}
          nodeRef={
            Object {
              "current": null,
            }
          }
          timeout={300}
          unmountOnExit={true}
        >
          <Transition2
            appear={false}
            enter={true}
            exit={true}
            in={false}
            mountOnEnter={true}
            nodeRef={
              Object {
                "current": null,
              }
            }
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={true}
          />
        </CSSTransition2>
      </Overlay>
      <CSSTransition2
        classNames="rc-fade"
        mountOnEnter={true}
        nodeRef={
          Object {
            "current": undefined,
          }
        }
        onEnter={[Function]}
        onExited={[Function]}
        timeout={
          Object {
            "exit": 300,
          }
        }
      >
        <Transition2
          appear={false}
          enter={true}
          exit={true}
          in={false}
          mountOnEnter={true}
          nodeRef={
            Object {
              "current": undefined,
            }
          }
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          timeout={
            Object {
              "exit": 300,
            }
          }
          unmountOnExit={false}
        />
      </CSSTransition2>
    </Portal>
  </Popup>
</ImagePreview>
`;

exports[`ImagePreview designate start position 1`] = `
<ImagePreview
  closeIcon="clear"
  closeIconPosition="top-right"
  images={
    Array [
      "https://img.yzcdn.cn/vant/apple-1.jpg",
      "https://img.yzcdn.cn/vant/apple-2.jpg",
      "https://img.yzcdn.cn/vant/apple-3.jpg",
    ]
  }
  loop={true}
  maxZoom={3}
  overlay={true}
  showIndex={true}
  showIndicators={false}
  startPosition={2}
  swipeDuration={300}
>
  <Popup
    className="rc-image-preview"
    closeIcon="cross"
    closeIconPosition="top-right"
    closeOnClickOverlay={true}
    duration={300}
    lockScroll={true}
    overlay={true}
    overlayClass="rc-image-preview__overlay"
    position="center"
    preventDefaultMouseDown={false}
    teleport={[Function]}
  >
    <Portal
      containerInfo={<body />}
    >
      <Overlay
        className="rc-image-preview__overlay"
        duration={300}
        lockScroll={true}
        onClick={[Function]}
        zIndex={2000}
      >
        <CSSTransition2
          classNames="rc-fade"
          mountOnEnter={true}
          nodeRef={
            Object {
              "current": null,
            }
          }
          timeout={300}
          unmountOnExit={true}
        >
          <Transition2
            appear={false}
            enter={true}
            exit={true}
            in={false}
            mountOnEnter={true}
            nodeRef={
              Object {
                "current": null,
              }
            }
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={true}
          />
        </CSSTransition2>
      </Overlay>
      <CSSTransition2
        classNames="rc-fade"
        mountOnEnter={true}
        nodeRef={
          Object {
            "current": undefined,
          }
        }
        onEnter={[Function]}
        onExited={[Function]}
        timeout={
          Object {
            "exit": 300,
          }
        }
      >
        <Transition2
          appear={false}
          enter={true}
          exit={true}
          in={false}
          mountOnEnter={true}
          nodeRef={
            Object {
              "current": undefined,
            }
          }
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          timeout={
            Object {
              "exit": 300,
            }
          }
          unmountOnExit={false}
        />
      </CSSTransition2>
    </Portal>
  </Popup>
</ImagePreview>
`;

exports[`ImagePreview show close icon 1`] = `
<ImagePreview
  closeIcon="clear"
  closeIconPosition="top-right"
  closeable={true}
  images={
    Array [
      "https://img.yzcdn.cn/vant/apple-1.jpg",
      "https://img.yzcdn.cn/vant/apple-2.jpg",
      "https://img.yzcdn.cn/vant/apple-3.jpg",
    ]
  }
  loop={true}
  maxZoom={3}
  overlay={true}
  showIndex={true}
  showIndicators={false}
  startPosition={2}
  swipeDuration={300}
>
  <Popup
    className="rc-image-preview"
    closeIcon="cross"
    closeIconPosition="top-right"
    closeOnClickOverlay={true}
    duration={300}
    lockScroll={true}
    overlay={true}
    overlayClass="rc-image-preview__overlay"
    position="center"
    preventDefaultMouseDown={false}
    teleport={[Function]}
  >
    <Portal
      containerInfo={<body />}
    >
      <Overlay
        className="rc-image-preview__overlay"
        duration={300}
        lockScroll={true}
        onClick={[Function]}
        zIndex={2000}
      >
        <CSSTransition2
          classNames="rc-fade"
          mountOnEnter={true}
          nodeRef={
            Object {
              "current": null,
            }
          }
          timeout={300}
          unmountOnExit={true}
        >
          <Transition2
            appear={false}
            enter={true}
            exit={true}
            in={false}
            mountOnEnter={true}
            nodeRef={
              Object {
                "current": null,
              }
            }
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={true}
          />
        </CSSTransition2>
      </Overlay>
      <CSSTransition2
        classNames="rc-fade"
        mountOnEnter={true}
        nodeRef={
          Object {
            "current": undefined,
          }
        }
        onEnter={[Function]}
        onExited={[Function]}
        timeout={
          Object {
            "exit": 300,
          }
        }
      >
        <Transition2
          appear={false}
          enter={true}
          exit={true}
          in={false}
          mountOnEnter={true}
          nodeRef={
            Object {
              "current": undefined,
            }
          }
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          timeout={
            Object {
              "exit": 300,
            }
          }
          unmountOnExit={false}
        />
      </CSSTransition2>
    </Portal>
  </Popup>
</ImagePreview>
`;

exports[`ImagePreview show indicators 1`] = `
<ImagePreview
  closeIcon="clear"
  closeIconPosition="top-right"
  images={
    Array [
      "https://img.yzcdn.cn/vant/apple-1.jpg",
      "https://img.yzcdn.cn/vant/apple-2.jpg",
      "https://img.yzcdn.cn/vant/apple-3.jpg",
    ]
  }
  loop={true}
  maxZoom={3}
  overlay={true}
  showIndex={false}
  showIndicators={true}
  startPosition={0}
  swipeDuration={300}
>
  <Popup
    className="rc-image-preview"
    closeIcon="cross"
    closeIconPosition="top-right"
    closeOnClickOverlay={true}
    duration={300}
    lockScroll={true}
    overlay={true}
    overlayClass="rc-image-preview__overlay"
    position="center"
    preventDefaultMouseDown={false}
    teleport={[Function]}
  >
    <Portal
      containerInfo={
        <body
          class=""
        />
      }
    >
      <Overlay
        className="rc-image-preview__overlay"
        duration={300}
        lockScroll={true}
        onClick={[Function]}
        zIndex={2000}
      >
        <CSSTransition2
          classNames="rc-fade"
          mountOnEnter={true}
          nodeRef={
            Object {
              "current": null,
            }
          }
          timeout={300}
          unmountOnExit={true}
        >
          <Transition2
            appear={false}
            enter={true}
            exit={true}
            in={false}
            mountOnEnter={true}
            nodeRef={
              Object {
                "current": null,
              }
            }
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={true}
          />
        </CSSTransition2>
      </Overlay>
      <CSSTransition2
        classNames="rc-fade"
        mountOnEnter={true}
        nodeRef={
          Object {
            "current": undefined,
          }
        }
        onEnter={[Function]}
        onExited={[Function]}
        timeout={
          Object {
            "exit": 300,
          }
        }
      >
        <Transition2
          appear={false}
          enter={true}
          exit={true}
          in={false}
          mountOnEnter={true}
          nodeRef={
            Object {
              "current": undefined,
            }
          }
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          timeout={
            Object {
              "exit": 300,
            }
          }
          unmountOnExit={false}
        />
      </CSSTransition2>
    </Portal>
  </Popup>
</ImagePreview>
`;
